Ajustes nos endpoints de criar e obter posts
